style(assets) fixed size for action column in asset panel (#2041)
Set fixed width to action columns
Use handmade column widths instead of boostrap classes
Fixes small gap on td content that could appear depending on the content

--- a/frontend/app/js/assets/assets.less
+++ b/frontend/app/js/assets/assets.less
@@ -21,3 +21,19 @@
   height:calc(~"100%" - @asset-panel-header-height);
 }
 
+.AssetTable-active {
+  width: 4em;
+}
+
+.AssetTable-actions {
+  width: 7.2em;
+}
+
+.AssetTable-scope {
+  width: 20%;
+}
+
+.AssetTable-type {
+  width: 8em;
+}
+
